Keep only main syslog files (syslog, kern.log and auth.log)

--- a/files/syslog-ng.conf
+++ b/files/syslog-ng.conf
@@ -218,11 +218,11 @@ log {
 #};
 
 # daemon.*                        -/var/log/daemon.log
-log {
-        source(s_all);
-        filter(f_daemon);
-        destination(df_daemon);
-};
+# log {
+#         source(s_all);
+#         filter(f_daemon);
+#         destination(df_daemon);
+# };
 
 # kern.*                          -/var/log/kern.log
 log {
@@ -232,101 +232,101 @@ log {
 };
 
 # lpr.*                           -/var/log/lpr.log
-log {
-        source(s_all);
-        filter(f_lpr);
-        destination(df_lpr);
-};
+# log {
+#         source(s_all);
+#         filter(f_lpr);
+#         destination(df_lpr);
+# };
 
 # mail.*                          -/var/log/mail.log
-log {
-        source(s_all);
-        filter(f_mail);
-        destination(df_mail);
-};
+# log {
+#         source(s_all);
+#         filter(f_mail);
+#         destination(df_mail);
+# };
 
 # user.*                          -/var/log/user.log
-log {
-        source(s_all);
-        filter(f_user);
-        destination(df_user);
-};
+# log {
+#         source(s_all);
+#         filter(f_user);
+#         destination(df_user);
+# };
 
 # uucp.*                          /var/log/uucp.log
-log {
-        source(s_all);
-        filter(f_uucp);
-        destination(df_uucp);
-};
+# log {
+#         source(s_all);
+#         filter(f_uucp);
+#         destination(df_uucp);
+# };
 
 # mail.info                       -/var/log/mail.info
-log {
-        source(s_all);
-        filter(f_mail);
-        filter(f_at_least_info);
-        destination(df_facility_dot_info);
-};
+# log {
+#         source(s_all);
+#         filter(f_mail);
+#         filter(f_at_least_info);
+#         destination(df_facility_dot_info);
+# };
 
 # mail.warn                       -/var/log/mail.warn
-log {
-        source(s_all);
-        filter(f_mail);
-        filter(f_at_least_warn);
-        destination(df_facility_dot_warn);
-};
+# log {
+#         source(s_all);
+#         filter(f_mail);
+#         filter(f_at_least_warn);
+#         destination(df_facility_dot_warn);
+# };
 
 # mail.err                        /var/log/mail.err
-log {
-        source(s_all);
-        filter(f_mail);
-        filter(f_at_least_err);
-        destination(df_facility_dot_err);
-};
+# log {
+#         source(s_all);
+#         filter(f_mail);
+#         filter(f_at_least_err);
+#         destination(df_facility_dot_err);
+# };
 
 # news.crit                       /var/log/news/news.crit
-log {
-        source(s_all);
-        filter(f_news);
-        filter(f_at_least_crit);
-        destination(df_news_dot_crit);
-};
+# log {
+#         source(s_all);
+#         filter(f_news);
+#         filter(f_at_least_crit);
+#         destination(df_news_dot_crit);
+# };
 
 # news.err                        /var/log/news/news.err
-log {
-        source(s_all);
-        filter(f_news);
-        filter(f_at_least_err);
-        destination(df_news_dot_err);
-};
+# log {
+#         source(s_all);
+#         filter(f_news);
+#         filter(f_at_least_err);
+#         destination(df_news_dot_err);
+# };
 
 # news.notice                     /var/log/news/news.notice
-log {
-        source(s_all);
-        filter(f_news);
-        filter(f_at_least_notice);
-        destination(df_news_dot_notice);
-};
+# log {
+#         source(s_all);
+#         filter(f_news);
+#         filter(f_at_least_notice);
+#         destination(df_news_dot_notice);
+# };
 
 
 # *.=debug;\
 #         auth,authpriv.none;\
 #         news.none;mail.none     -/var/log/debug
-log {
-        source(s_all);
-        filter(f_debug);
-        destination(df_debug);
-};
+# log {
+#         source(s_all);
+#         filter(f_debug);
+#         destination(df_debug);
+# };
 
 
 # *.=info;*.=notice;*.=warn;\
 #         auth,authpriv.none;\
 #         cron,daemon.none;\
 #         mail,news.none          -/var/log/messages
-log {
-        source(s_all);
-        filter(f_messages);
-        destination(df_messages);
-};
+# log {
+#         source(s_all);
+#         filter(f_messages);
+#         destination(df_messages);
+# };
 
 # *.emerg                         *
 log {
@@ -340,9 +340,9 @@ log {
 #         news.crit;news.err;news.notice;\
 #         *.=debug;*.=info;\
 #         *.=notice;*.=warn       |/dev/xconsole
-log {
-        source(s_all);
-        filter(f_xconsole);
-        destination(dp_xconsole);
-};
+# log {
+#         source(s_all);
+#         filter(f_xconsole);
+#         destination(dp_xconsole);
+# };
 
