Enable rsyslog udp on localhost (required by log4j ...)

--- a/templates/rsyslog.conf
+++ b/templates/rsyslog.conf
@@ -13,8 +13,9 @@ $ModLoad imklog   # provides kernel logging support (previously done by rklogd)
 #$ModLoad immark  # provides --MARK-- message capability
 
 # provides UDP syslog reception
-#$ModLoad imudp
-#$UDPServerRun 514
+$ModLoad imudp
+$UDPServerRun 514
+$UDPServerAddress 127.0.0.1
 
 # provides TCP syslog reception
 #$ModLoad imtcp
