Fixed configuration file for syslog-ng > 3.0

--- a/files/syslog-ng.conf
+++ b/files/syslog-ng.conf
@@ -12,11 +12,11 @@
 
 ######
 # options
-
+@version: 3.1
 options {
         # disable the chained hostname format in logs
         # (default is enabled)
-        chain_hostnames(0);
+        chain_hostnames(no);
 
         # the time to wait before a died connection is re-established
         # (default is 60)
@@ -87,7 +87,7 @@ source s_all {
         # function to send logs to)
         unix-stream("/dev/log");
         # messages from the kernel
-        file("/proc/kmsg" log_prefix("kernel: "));
+        file("/proc/kmsg" program_override("kernel"));
         # use the following line if you want to receive remote UDP logging messages
         # (this is equivalent to the "-r" syslogd flag)
         udp();
