Use /srv/log for syslog and archives

--- a/files/syslog-ng.conf
+++ b/files/syslog-ng.conf
@@ -99,7 +99,7 @@ source s_all {
 
 # some standard log files
 destination df_auth { file("/var/log/auth.log"); };
-destination df_syslog { file("/var/log/syslog"); };
+destination df_syslog { file("/srv/log/syslog"); };
 destination df_cron { file("/var/log/cron.log"); };
 destination df_daemon { file("/var/log/daemon.log"); };
 destination df_kern { file("/var/log/kern.log"); };
@@ -345,4 +345,3 @@ log {
 #         filter(f_xconsole);
 #         destination(dp_xconsole);
 # };
-
