pass remote syslog servers as a class arg and fix template

--- a/templates/rsyslog.conf
+++ b/templates/rsyslog.conf
@@ -115,6 +115,6 @@ kern.*				-/var/log/kern.log
 # 	*.=debug;*.=info;\
 # 	*.=notice;*.=warn	|/dev/xconsole
 
-<% syslog_servers.split(',').each do |syslog_server| %>
+<% @syslog_servers.split(',').each do |syslog_server| %>
 *.*             @<%= syslog_server %>
 <% end %>
