--- a/templates/rsyslog.conf
+++ b/templates/rsyslog.conf
@@ -116,5 +116,5 @@ kern.*				-/var/log/kern.log
 # 	*.=notice;*.=warn	|/dev/xconsole
 
 <% @syslog_servers.split(',').each do |syslog_server| %>
-*.*             @<%= syslog_server %>
+*.*             @<%= syslog_server %>;RSYSLOG_ForwardFormat
 <% end %>
